--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@achingbrain/nat-port-mapper": "^1.0.7",
     "@orbitdb/core": "^1.0.0",
+    "bootstrap": "^5.3.2",
     "ipfs-core": "^0.18.1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "xgplayer": "^3.0.9",
+    "xgplayer-hls.js": "^3.0.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
