--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@achingbrain/nat-port-mapper": "^1.0.7",
     "@orbitdb/core": "^1.0.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "ipfs-core": "^0.18.1",
     "vue": "^3.3.4",
